added editmonster menu options; can delete teams now

--- a/app/src/main/res/layout/list_item_team.xml
+++ b/app/src/main/res/layout/list_item_team.xml
@@ -3,7 +3,8 @@
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
-    android:layout_margin="8dp">
+    android:padding="8dp"
+    android:background="@color/green">
     
     <TextView
         android:id="@+id/team_list_item_name"
