--- a/app/src/main/res/layout/fragment_edit_monster.xml
+++ b/app/src/main/res/layout/fragment_edit_monster.xml
@@ -14,6 +14,7 @@
             android:text="@string/edit_name"
             style="?android:listSeparatorTextViewStyle"/>
         <EditText
+            android:id="@+id/monster_name_edit_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:hint="@string/edit_name_hint"/>
@@ -29,6 +30,7 @@
             android:layout_height="match_parent"
             android:text="@string/edit_hp"/>
         <EditText
+            android:id="@+id/monster_hp_edit_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:hint="@string/edit_hp_hint"/>
@@ -44,6 +46,7 @@
             android:layout_height="match_parent"
             android:text="@string/edit_atk"/>
         <EditText
+            android:id="@+id/monster_atk_edit_text"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:hint="@string/edit_atk_hint"/>
@@ -59,6 +62,7 @@
             android:layout_height="match_parent"
             android:text="@string/edit_rcv"/>
         <EditText
+            android:id="@+id/monster_rcv_edit_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:hint="@string/edit_rcv_hint"/>
