--- a/app/src/main/res/menu/fragment_team_page.xml
+++ b/app/src/main/res/menu/fragment_team_page.xml
@@ -7,4 +7,8 @@
         android:title="@string/menu_save"
         app:showAsAction="always|withText"/>
 
+    <item
+        android:id="@+id/menu_item_delete_team"
+        android:title="Delete Team"
+        app:showAsAction="never|withText"/>
 </menu>
