--- a/app/src/main/res/menu/fragment_edit_monster.xml
+++ b/app/src/main/res/menu/fragment_edit_monster.xml
@@ -4,6 +4,6 @@
     <item
         android:id="@+id/menu_monster_save"
         android:icon="@drawable/ic_menu_save"
-        android:title="Save Monster"
+        android:title="@string/menu_save_monster"
         app:showAsAction="always"/>
 </menu>
