--- a/app/src/main/res/menu/fragment_team_list.xml
+++ b/app/src/main/res/menu/fragment_team_list.xml
@@ -8,5 +8,9 @@
         android:title="@string/menu_new_team"
         app:showAsAction="ifRoom|withText"/>
 
+    <item
+        android:id="@+id/menu_item_manage_accounts"
+        android:title="@string/menu_accounts"
+        app:showAsAction="never"/>
 
 </menu>
