--- a/app/src/main/res/layout/fragment_monster_search.xml
+++ b/app/src/main/res/layout/fragment_monster_search.xml
@@ -3,37 +3,32 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
-    <android.support.constraint.ConstraintLayout
-                                                 android:orientation="vertical"
-                                                 android:layout_width="match_parent"
-                                                 android:layout_height="match_parent">
 
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:text="@string/monster_search_title_text"
-            tools:text="@string/monster_search_title_text"
-            tools:layout_constraintTop_creator="1"
-            android:layout_marginStart="8dp"
-            tools:layout_constraintLeft_creator="1"
-            app:layout_constraintLeft_toLeftOf="parent"
-            android:layout_marginLeft="8dp"
+    <android.support.constraint.ConstraintLayout
+             android:orientation="vertical"
+             android:layout_width="match_parent"
+             android:layout_height="match_parent">
+
+        <CheckBox
+            android:id="@+id/new_monster_checkbox"
+            android:layout_width="169dp"
+            android:layout_height="0dp"
+            android:text="@string/new_monster_checkbox_text"
             app:layout_constraintTop_toTopOf="parent"
             android:layout_marginTop="8dp"
-            android:id="@+id/textView"/>
+            android:layout_marginLeft="8dp"
+            app:layout_constraintLeft_toLeftOf="parent"/>
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/monster_search_recycler_view"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/textView"
             android:layout_marginLeft="8dp"
-            app:layout_constraintLeft_toLeftOf="parent"
             android:layout_marginRight="8dp"
+            android:layout_marginTop="8dp"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            >
-
-        </android.support.v7.widget.RecyclerView>
+            app:layout_constraintTop_toBottomOf="@+id/new_monster_checkbox"/>
     </android.support.constraint.ConstraintLayout>
 </layout>
