--- a/app/src/main/res/layout/fragment_monster_search.xml
+++ b/app/src/main/res/layout/fragment_monster_search.xml
@@ -21,11 +21,12 @@
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/monster_search_recycler_view"
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
             android:layout_marginTop="8dp"
+            android:background="@color/blue"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
