--- a/app/src/main/res/layout/list_item_monster_search.xml
+++ b/app/src/main/res/layout/list_item_monster_search.xml
@@ -1,21 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <data>
         <variable
-            name="model"
+            name="monster"
             type="edmanfeng.paddamagecalculator.GameModel.Monster" />
     </data>
 
-    <FrameLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="?attr/selectableItemBackground"
-        android:clickable="true">
+    <!--android:background="?attr/selectableItemBackground"-->
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="8dp"
-            android:text="@{model.name}"/>
-    </FrameLayout>
+    <TextView
+        android:id="@+id/monster_text_view"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="8dp"
+        android:background="@color/colorPrimary"
+        android:text="@{monster.name}"/>
+
 </layout>
