--- a/app/src/main/res/layout/list_item_monster_search.xml
+++ b/app/src/main/res/layout/list_item_monster_search.xml
@@ -14,7 +14,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="8dp"
-        android:background="@color/colorPrimary"
+        android:background="@color/colorAccent"
         android:text="@{monster.name}"/>
 
 </layout>
