--- a/app/src/main/res/layout/fragment_edit_monster.xml
+++ b/app/src/main/res/layout/fragment_edit_monster.xml
@@ -14,6 +14,14 @@
                                                  tools:layout_editor_absoluteY="0dp"
                                                  tools:layout_editor_absoluteX="0dp">
 
+        <ImageView
+            android:id="@+id/monster_image"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:layout_marginLeft="8dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginTop="8dp"/>
         <TextView
             android:id="@+id/linearLayout2"
             android:layout_width="0dp"
@@ -21,13 +29,14 @@
             android:layout_marginEnd="8dp"
             android:layout_marginLeft="8dp"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="25dp"
+            android:layout_marginTop="16dp"
             android:text="@{monster.name}"
-            app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             tools:text="name"
             android:layout_marginRight="8dp"
-            app:layout_constraintRight_toRightOf="parent"/>
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintLeft_toRightOf="@+id/monster_image"
+            app:layout_constraintHorizontal_bias="0.0"/>
 
         <TextView
             android:id="@+id/monster_num_text_view"
@@ -36,12 +45,12 @@
             android:text="@{String.valueOf(monster.num)}"
             tools:text="Number"
             android:layout_marginLeft="8dp"
-            app:layout_constraintLeft_toLeftOf="parent"
             android:layout_marginRight="8dp"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/linearLayout2"/>
+            app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
+            app:layout_constraintLeft_toRightOf="@+id/monster_image"/>
 
 
         <TextView
@@ -60,12 +69,10 @@
             android:layout_height="wrap_content"
             android:hint="@string/edit_hp_hint"
             android:text="@{String.valueOf(monster.hp)}"
-            android:layout_marginRight="246dp"
-            app:layout_constraintRight_toRightOf="parent"
-            android:layout_marginTop="32dp"
+            android:layout_marginTop="35dp"
             app:layout_constraintTop_toBottomOf="@+id/monster_num_text_view"
             app:layout_constraintLeft_toRightOf="@+id/textView3"
-            android:layout_marginLeft="8dp"/>
+            android:layout_marginLeft="22dp"/>
 
 
         <TextView
@@ -91,7 +98,7 @@
             tools:layout_conversion_absoluteY="495dp"
             tools:layout_conversion_absoluteWidth="80dp"
             tools:layout_conversion_absoluteHeight="0dp"
-            android:layout_marginTop="21dp"
+            android:layout_marginTop="22dp"
             app:layout_constraintTop_toBottomOf="@+id/monster_hp_edit_text"
             app:layout_constraintLeft_toRightOf="@+id/textView"
             android:layout_marginLeft="19dp"/>
@@ -120,13 +127,11 @@
             tools:layout_conversion_absoluteY="495dp"
             tools:layout_conversion_absoluteWidth="82dp"
             tools:layout_conversion_absoluteHeight="0dp"
-            android:layout_marginTop="21dp"
+            android:layout_marginTop="28dp"
             app:layout_constraintTop_toBottomOf="@+id/monster_atk_edit_text"
-            android:layout_marginLeft="8dp"
-            android:layout_marginRight="8dp"
-            app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginLeft="17dp"
             app:layout_constraintLeft_toRightOf="@+id/textView2"
-            app:layout_constraintHorizontal_bias="0.035"/>
+            />
 
 
     </android.support.constraint.ConstraintLayout>
