--- a/app/src/main/res/layout/list_item_monster.xml
+++ b/app/src/main/res/layout/list_item_monster.xml
@@ -1,14 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
-              android:layout_width="wrap_content"
-              android:layout_height="wrap_content"
-    android:layout_margin="0dp">
+<layout>
+    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                  android:orientation="vertical"
+                  android:layout_width="wrap_content"
+                  android:layout_height="wrap_content"
+        android:layout_margin="0dp">
 
-    <ImageButton
-        android:id="@+id/monster_item"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:padding="0dp"
-        android:layout_margin="0dp"/>
-</FrameLayout>
+        <ImageButton
+            android:id="@+id/monster_item"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="0dp"
+            android:layout_margin="0dp"/>
+    </FrameLayout>
+</layout>
