--- a/app/src/main/res/layout/list_item_monster.xml
+++ b/app/src/main/res/layout/list_item_monster.xml
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout>
+    <data>
+        <variable
+            name="monster"
+            type="edmanfeng.paddamagecalculator.GameModel.Monster"/>
+    </data>
     <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
                   android:orientation="vertical"
                   android:layout_width="wrap_content"
@@ -8,8 +13,8 @@
 
         <ImageButton
             android:id="@+id/monster_item"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="56dp"
+            android:layout_height="56dp"
             android:padding="0dp"
             android:layout_margin="0dp"/>
     </FrameLayout>
