--- a/app/src/main/res/layout/list_item_monster.xml
+++ b/app/src/main/res/layout/list_item_monster.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout>
+<layout xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:android="http://schemas.android.com/apk/res/android">
     <data>
         <variable
             name="monster"
             type="edmanfeng.paddamagecalculator.GameModel.Monster"/>
     </data>
-    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                  android:orientation="vertical"
+    <FrameLayout  android:orientation="vertical"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
         android:layout_margin="0dp">
@@ -16,6 +16,7 @@
             android:layout_width="56dp"
             android:layout_height="56dp"
             android:padding="0dp"
-            android:layout_margin="0dp"/>
+            android:layout_margin="0dp"
+            app:imageUrl="@{monster.imageUrl.toString()}"/>
     </FrameLayout>
 </layout>
