--- a/app/src/main/res/layout/fragment_team_page.xml
+++ b/app/src/main/res/layout/fragment_team_page.xml
@@ -9,7 +9,7 @@
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/team_recycler_view"
-            android:layout_width="336dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:layout_constraintTop_toTopOf="parent"
             android:layout_marginTop="8dp"
