--- a/app/src/main/res/layout/fragment_monster_search.xml
+++ b/app/src/main/res/layout/fragment_monster_search.xml
@@ -26,7 +26,7 @@
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
             android:layout_marginTop="8dp"
-            android:background="@color/blue"
+            android:paddingBottom="?attr/actionBarSize"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
