--- a/app/src/main/res/layout/fragment_edit_monster.xml
+++ b/app/src/main/res/layout/fragment_edit_monster.xml
@@ -70,7 +70,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:hint="@string/edit_hp_hint"
-            android:text="@{String.valueOf(monster.hp)}"
+            android:text="@={`` + monster.hp}"
             android:layout_marginTop="35dp"
             app:layout_constraintTop_toBottomOf="@+id/monster_num_text_view"
             app:layout_constraintLeft_toRightOf="@+id/textView3"
@@ -95,7 +95,7 @@
             android:layout_width="wrap_content"
             android:layout_height="0dp"
             android:hint="@string/edit_atk_hint"
-            android:text="@{String.valueOf(monster.atk)}"
+            android:text="@={`` + monster.atk}"
             tools:layout_conversion_absoluteX="21dp"
             tools:layout_conversion_absoluteY="495dp"
             tools:layout_conversion_absoluteWidth="80dp"
@@ -124,7 +124,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:hint="@string/edit_rcv_hint"
-            android:text="@{String.valueOf(monster.rcv)}"
+            android:text="@={`` + monster.rcv}"
             tools:layout_conversion_absoluteX="23dp"
             tools:layout_conversion_absoluteY="495dp"
             tools:layout_conversion_absoluteWidth="82dp"
