--- a/app/src/main/res/layout/fragment_team_page.xml
+++ b/app/src/main/res/layout/fragment_team_page.xml
@@ -63,7 +63,7 @@
             android:layout_marginStart="8dp"
             android:layout_marginTop="16dp"
             app:layout_constraintTop_toBottomOf="@+id/combo_shape_label"
-            android:layout_marginLeft="16dp"
+            android:layout_marginLeft="8dp"
             app:layout_constraintLeft_toLeftOf="parent"/>
 
         <android.support.v7.widget.AppCompatSpinner
@@ -76,7 +76,7 @@
             tools:layout_conversion_absoluteHeight="24dp"
             android:layout_marginStart="40dp"
             app:layout_constraintLeft_toRightOf="@+id/combo_orb_number_label"
-            android:layout_marginLeft="38dp"
+            android:layout_marginLeft="40dp"
             android:layout_marginTop="8dp"
             app:layout_constraintTop_toBottomOf="@+id/combo_shape_spinner"/>
 
@@ -91,7 +91,7 @@
             tools:layout_conversion_absoluteY="181dp"
             tools:layout_conversion_absoluteWidth="73dp"
             tools:layout_conversion_absoluteHeight="16dp"
-            android:layout_marginLeft="16dp"
+            android:layout_marginLeft="8dp"
             app:layout_constraintLeft_toLeftOf="parent"
             android:layout_marginStart="8dp"
             android:layout_marginTop="15dp"
@@ -123,7 +123,7 @@
             tools:layout_conversion_absoluteWidth="39dp"
             tools:layout_conversion_absoluteHeight="16dp"
             android:layout_marginStart="8dp"
-            android:layout_marginLeft="-3dp"
+            android:layout_marginLeft="8dp"
             app:layout_constraintLeft_toLeftOf="parent"
             android:layout_marginTop="15dp"
             app:layout_constraintTop_toBottomOf="@+id/combo_enhance_number_label"/>
@@ -140,7 +140,7 @@
             android:layout_marginTop="8dp"
             app:layout_constraintTop_toBottomOf="@+id/combo_enhance_number_spinner"
             app:layout_constraintLeft_toRightOf="@+id/combo_shape_label"
-            android:layout_marginLeft="8dp"/>
+            android:layout_marginLeft="42dp"/>
 
         <Button
             android:id="@+id/add_combo_button"
@@ -161,16 +161,28 @@
             android:layout_marginLeft="16dp"
             app:layout_constraintLeft_toLeftOf="parent"
             android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/combo_orb_number_spinner"/>
+            app:layout_constraintTop_toBottomOf="@+id/combo_orb_number_spinner"
+            android:layout_marginStart="16dp"/>
 
         <Button
             android:id="@+id/combo_calculate_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/calculate_combo_button_text"
-            tools:layout_editor_absoluteY="374dp"
             app:layout_constraintLeft_toRightOf="@+id/combo_recyclerview"
-            android:layout_marginLeft="89dp"/>
+            android:layout_marginLeft="81dp"
+            android:layout_marginTop="110dp"
+            app:layout_constraintTop_toBottomOf="@+id/add_combo_button"
+            android:layout_marginStart="81dp"/>
+
+        <EditText
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:hint="EXAMPLE"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/combo_calculate_button"
+            android:layout_marginRight="8dp"
+            app:layout_constraintRight_toRightOf="parent"/>
 
     </android.support.constraint.ConstraintLayout>
 </layout>
