--- a/app/src/main/res/layout/fragment_team_page.xml
+++ b/app/src/main/res/layout/fragment_team_page.xml
@@ -47,7 +47,8 @@
             android:layout_marginLeft="27dp"
             android:layout_marginTop="8dp"
             app:layout_constraintTop_toBottomOf="@+id/team_recycler_view"
-            android:layout_marginStart="27dp"/>
+            android:layout_marginStart="27dp"
+            app:selectedValue="@{orbmatch.orbType}"/>
 
 
         <TextView
