--- a/app/src/main/res/layout/fragment_team_page.xml
+++ b/app/src/main/res/layout/fragment_team_page.xml
@@ -48,7 +48,7 @@
             android:layout_marginTop="8dp"
             app:layout_constraintTop_toBottomOf="@+id/team_recycler_view"
             android:layout_marginStart="27dp"
-            app:selectedValue="@{orbmatch.orbType}"/>
+            app:selectedValue="@={orbmatch.orbType}"/>
 
 
         <TextView
