--- a/app/src/main/res/layout/fragment_team_page.xml
+++ b/app/src/main/res/layout/fragment_team_page.xml
@@ -162,7 +162,8 @@
             android:layout_marginLeft="8dp"
             app:layout_constraintLeft_toLeftOf="parent"
             android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/combo_enhance_number_spinner"/>
+            app:layout_constraintTop_toBottomOf="@+id/combo_enhance_number_spinner"
+            android:onClick="@{() -> adapters.onAddCombo(orbmatch, combolist)}"/>
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/combo_recyclerview"
