--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,13 @@
     <color name="yellow">#FFFF00</color>
     <color name="purple">#FF00FF</color>
     <color name="white">#FFFFFF</color>
+    <color name="pink">#FF69B4</color>
+
+    <drawable name="red">#FF0000</drawable>
+    <drawable name="blue">#0011FF</drawable>
+    <drawable name="green">#00FF00</drawable>
+    <drawable name="yellow">#FFFF00</drawable>
+    <drawable name="purple">#FF00FF</drawable>
+    <drawable name="white">#FFFFFF</drawable>
+    <drawable name="pink">#FF69B4</drawable>
 </resources>
